--- a/public/index.html
+++ b/public/index.html
@@ -14,18 +14,18 @@
   <section>
     <div class="panel panel-default">
       <div class="panel-body">
-        <form id="signup-form">
+        <form data-username-password="form" id="signup-form">
           <div class="form-group">
               <label for="name">Username</label>
-              <input class="form-control" placeholder="username" type="text" id="username" name="name" autofocus required pattern="[a-zA-Z\s]+"/>
+              <input class="form-control" placeholder="username" type="text" id="name" name="username" autofocus required pattern="[a-zA-Z\s]+"/>
           </div>
           <div class="form-group">
             <label for="pwd">Password</label>
-              <input class="form-control" type="password" id="password" name="pwd" placeholder="password" required>
+              <input class="form-control" type="password" id="password" name="password" placeholder="password" required>
           </div>
           <button type="submit" id="signup-submit" class="btn btn-default">Sign up</button>
           <!--<form data-username-password="form" id="comment-form">
-
+          <form id="signup-form">
            <div class="form-group">
               <label for="username">Username</label>
               <input class="form-control" name="name" id="username" placeholder="username" autofocus required pattern="[a-zA-Z\s]+">
@@ -44,10 +44,10 @@
       charset="utf-8"></script>
   <script src="scripts/dpd-user-api.js" charset="utf-8"></script>
   <script type="text/javascript" src="/dpd.js"></script>
-  <!-- <script src="scripts/formHandler.js" charset="utf-8"></script>
+  <script src="scripts/formHandler.js" charset="utf-8"></script>
   <script src="scripts/remotedatastores.js" charset="utf-8"></script>
   <script src="scripts/datastore.js" charset="utf-8"></script>
   <script src="scripts/user.js" charset="utf-8"></script>
-  <script src="scripts/main.js" charset="utf-8"></script> -->
+  <script src="scripts/main.js" charset="utf-8"></script>
 </body>
 </html>
