--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>Travel Voter</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css">
+  <style>
+    body {
+      padding-top: 50px;
+    }
+  </style>
 </head>
+
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <div class="container-fluid">
+    <div class="collapse navbar-collapse" id="navbar-login-group">
+      <div>
+        <form action="post" class="navbar-form navbar-right" data-login-form="form">
+          <div class="form-group">
+            <input type="text" name="username" placeholder="username">
+            <input type="password" name="password" placeholder="password">
+          </div>
+          <input type="submit" name="Submit" value="Submit">
+        </form>
+      </div>
+    </div>
+  </div>
+</nav>
+
 <body class="container">
   <header>
     <h1>Login</h1>
@@ -14,27 +37,28 @@
       <div class="panel-body">
         <form data-username-password="form" id="login-form">
           <div class="form-group">
-              <label for="name">Username</label>
-              <input class="form-control" placeholder="username" type="text" id="username" name="name" autofocus required pattern="[a-zA-Z\s]+"/>
+            <label for="name">Username</label>
+            <input class="form-control" placeholder="username" type="text" id="username" name="name" autofocus required pattern="[a-zA-Z\s]+" />
           </div>
           <div class="form-group">
             <label for="pwd">Password</label>
-              <input class="form-control" type="password" id="password" name="password" placeholder="password" required>
+            <input class="form-control" type="password" id="password" name="password" placeholder="password" required>
           </div>
           <button type="submit" id="signup-submit" class="btn btn-default">Login</button>
           <a href="/register.html" class="btn btn-link">sign up</a>
         </form>
       </div>
-      </div>
-    <div>
-</section>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>
-<script src="scripts/dpd-user-api.js" charset="utf-8"></script>
-<script type="text/javascript" src="/dpd.js"></script>
-<script src="scripts/formHandler.js" charset="utf-8"></script>
-<script src="scripts/remotedatastores.js" charset="utf-8"></script>
-<script src="scripts/datastore.js" charset="utf-8"></script>
-<script src="scripts/user.js" charset="utf-8"></script>
-<script src="scripts/main.js" charset="utf-8"></script>
+    </div>
+  </section>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>
+  <script src="scripts/dpd-user-api.js" charset="utf-8"></script>
+  <script type="text/javascript" src="/dpd.js"></script>
+  <script src="scripts/formHandler.js" charset="utf-8"></script>
+  <script src="scripts/remotedatastores.js" charset="utf-8"></script>
+  <script src="scripts/datastore.js" charset="utf-8"></script>
+  <script src="scripts/user.js" charset="utf-8"></script>
+  <script src="scripts/loginHandler.js" charset="utf-8"></script>
+  <script src="scripts/main.js" charset="utf-8"></script>
 </body>
+
 </html>
