--- a/public/welcome.html
+++ b/public/welcome.html
@@ -13,6 +13,7 @@
   <header class="main-header">
     <h3>
       <button class="logo-text" id="logout-btn">Logout</button>
+      <button type="button" class="logo-text" id="post-btn" data-toggle="modal" data-target="#postModal">  Post</button>
     </h3>
     <h1>Travel Voters</h1>
     <h2>"Traveling—It leaves you speechless, then turns you into a storyteller."</h2>
@@ -163,6 +164,28 @@
     </div>
   </div>
 </div>
+    
+    
+   <!-- Modal -->
+    <div class="modal fade" id="postModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Add A destination title</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+          </div>
+          <div class="modal-body">
+            Post Data
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
 <div class="detail-image-container">
