--- a/public/welcome.html
+++ b/public/welcome.html
@@ -151,7 +151,7 @@
 <script>
 </script>
 
-<!-- Modal -->
+<!-- Modal for destination description-->
 <div class="modal fade" id="destModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -172,6 +172,10 @@
             <div class="detail-image-description" data-image-role="description"></div>
             <h4>Ranking:</h4>
             <div class="detail-image-description">5/5.</div>
+            <h4 class="form-group">
+              <label for="rateLocation">How would you rate this destination? </label>
+              <input name="rateLocation" id="rateLocationID"  value="10">
+            </h4>
           </div>
         </div>
       </div>
@@ -182,6 +186,47 @@
     </div>
   </div>
 </div>
+
+<!-- Modal for posting new destination-->
+<div class="modal fade" id="postModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <h5 class="modal-title" id="exampleModalLabel">
+          <div class="detail-image-title">Post Your Travel</div>
+        </h5>
+      </div>
+      <div class="modal-body">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <form data-coffee-order="form">
+              <div class="form-group">
+                <label for="Location">Where did you go?</label>
+                <input class="form-control" name="Location" id="locationID" autofocus required pattern="[a-zA-Z\s]+">
+              </div>
+              <div class="form-group">
+                <label for="locationComment">Describe the location </label>
+                <input rows="3" class="form-control" name="locationComment" id="locationCommentID" autofocus required pattern="[a-zA-Z\s]+">
+              </div>
+              <div class="form-group">
+                <label for="rateLocation">How would you rate your stay? </label>
+                <input name="rateLocation" id="rateLocationIDpost"  value="10">
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Submit</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 
 <div class="detail-image-container">
