added dynamic places and post modal

--- a/public/register.html
+++ b/public/register.html
@@ -3,6 +3,8 @@
 <head>
   <title>Register</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lobster">
+  <link rel="stylesheet" type="text/css" href="stylesheets\stylesheet.css">
 </head>
 <body class="container">
   <header>
