--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>Travel Voter</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lobster">
+  <link rel="stylesheet" type="text/css" href="stylesheets\stylesheet.css">
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="img/favicon.ico" type="image/x-icon">
   <style>
     body {
       padding-top: 50px;
@@ -14,7 +19,7 @@
     }
   </style>
 </head>
-
+<!--
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="container-fluid">
     <div class="collapse navbar-collapse" id="navbar-login-group">
@@ -37,7 +42,7 @@
     </div>
   </div>
 </nav>
-
+-->
 <body class="container">
   <header>
     <h1>Login</h1>
