Fileupload and places submissions

--- a/public/welcome.html
+++ b/public/welcome.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Welcome Page</title>
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lobster">
@@ -9,6 +10,7 @@
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
   <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 </head>
+
 <body>
   <header class="main-header">
     <h3>
@@ -20,20 +22,17 @@
 
   </header>
   <main class="main-content">
-  	<script id="places-template" type="x-tmp-mustache">
-<li class="thumbnail-item" data-toggle="modal" data-target="#destModal">
-  <a href="{{imageurl}}" data-image-role="trigger"
-  data-image-title="{{name}}"
-  data-image-url="{{imageurl}}"
-  data-image-desc="{{description}}">
+    <script id="places-template" type="x-tmp-mustache">
+      <li class="thumbnail-item" data-toggle="modal" data-target="#destModal">
+        <a href="{{imageurl}}" data-image-role="trigger" data-image-title="{{name}}" data-image-url="{{imageurl}}" data-image-desc="{{description}}">
   <img onmouseover="getElementById('preview').src=getElementById('{{name}}').src"
   id="{{name}}" class="thumbnail-image" src="{{imageurl}}" alt="{{name}}">
   <span class="thumbnail-title">{{name}}</span>
 </a>
-</li>
-</script>
+      </li>
+    </script>
 
-<ul id="target" class="thumbnail-list"></ul>
+    <ul id="target" class="thumbnail-list"></ul>
 
     <ul class="thumbnail-list">
 
@@ -150,103 +149,103 @@
   <span class="thumbnail-title">La Paz, Bolivia</span>
 </a>
 </li>-->
-</ul>
+    </ul>
 
-<!-- Modal -->
-<div class="modal fade" id="destModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+    <!-- Modal -->
+    <div class="modal fade" id="destModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-        <h5 class="modal-title" id="exampleModalLongTitle">
+            <h5 class="modal-title" id="exampleModalLongTitle">
           <div class="detail-image-title" data-image-role="title"></div>
         </h5>
-      </div>
-      <div class="modal-body">
-        <div class="detail-image-container">
-          <div class="detail-image-frame">
-            <img class="detail-image" data-image-role="target" src="img/bali-indonesia.jpg" alt="">
-            <br><br>
-            <h4>Description:</h4>
-            <div class="detail-image-description" data-image-role="description"></div>
-            <h4>Ranking:</h4>
-            <div class="detail-image-description">5/5.</div>
+          </div>
+          <div class="modal-body">
+            <div class="detail-image-container">
+              <div class="detail-image-frame">
+                <img class="detail-image" data-image-role="target" src="img/bali-indonesia.jpg" alt="">
+                <br><br>
+                <h4>Description:</h4>
+                <div class="detail-image-description" data-image-role="description"></div>
+                <h4>Ranking:</h4>
+                <div class="detail-image-description">5/5.</div>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Vote</button>
           </div>
         </div>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Vote</button>
-      </div>
     </div>
-  </div>
-</div>
 
-<div class="modal fade" id="postModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+    <div class="modal fade" id="postModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-        <h5 class="modal-title" id="exampleModalLabel">
+            <h5 class="modal-title" id="exampleModalLabel">
           <div class="detail-image-title">Post Your Travel</div>
         </h5>
-      </div>
-      <div class="modal-body">
-        <div class="panel panel-default">
-          <div class="panel-body">
-            <form data-coffee-order="form" id="places-form">
-              <div class="form-group">
-                <label for="Location">Where did you go?</label>
-                <input class="form-control" name="Location" id="name" autofocus required pattern="[a-zA-Z\s]+">
+          </div>
+          <div class="modal-body">
+            <div class="panel panel-default">
+              <div class="panel-body">
+                <form action="fileupload" enctype="multipart/form-data" data-picture-form="form">
+                  <div class="form-group">
+                    <label for="Location">Where did you go?</label>
+                    <input class="form-control" name="Location" id="name" autofocus required pattern="[a-zA-Z\s]+">
+                  </div>
+                  <div class="form-group">
+                    <label for="locationComment">Describe the location</label>
+                    <input class="form-control" name="locationComment" id="description" autofocus required pattern="[a-zA-Z\s]+">
+                  </div>
+                  <div class="form-group">
+                    <label for="rateLocation">How would you rate your stay </label>
+                    <input name="rateLocation" id="rating" value="10">
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary" id="places-submit">Submit</button>
+                  </div>
+                    <label for="uploadPic">Please upload a picture of your destination</label>
+                    <input id="fileinput" type="file" name="file" value="file" accept=".jpg,.png,.gif">
+                </form>
               </div>
-              <div class="form-group">
-                <label for="locationComment">Describe the location</label>
-                <input class="form-control" name="locationComment" id="description" autofocus required pattern="[a-zA-Z\s]+">
-              </div>
-              <div class="form-group">
-                <label for="rateLocation">How would you rate your stay </label>
-                <input name="rateLocation" id="rating" value="10">
-              </div>
-              <div class="modal-footer">
-		        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-		        <button type="submit" class="btn btn-primary" id="places-submit">Submit</button>
-		      </div>
-            </form>
-            <form action="fileupload" enctype="multipart/form-data" data-picture-form="form">
-                <label for= "uploadPic">Please upload a picture of your destination</label>
-                <input type="file" name="file" value="file">
-			</form>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</div>
 
-<div class="detail-image-container">
-  <div class="detail-image-frame">
-    <img id="preview" class="detail-image-preview" data-image-role="target" src={{ imageurl }} alt="">
-  </div>
-</div>
+    <div class="detail-image-container">
+      <div class="detail-image-frame">
+        <img id="preview" class="detail-image-preview" data-image-role="target" src="img/bali-indonesia.jpg" alt="">
+      </div>
+    </div>
 
-</main>
+  </main>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.min.js"></script>
-<script type="text/javascript" src="scripts/dashboard.js"></script>
-<script src="scripts/dpd-places-api.js" charset="utf-8"></script>
-<script type="text/javascript" src="/dpd.js"></script>
-<script src="scripts/formHandler.js" charset="utf-8"></script>
-<script src="scripts/remotedatastores.js" charset="utf-8"></script>
-<script src="scripts/datastore.js" charset="utf-8"></script>
-<script src="scripts/user.js" charset="utf-8"></script>
-<script src="scripts/main.js" charset="utf-8"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.min.js"></script>
+  <script type="text/javascript" src="scripts/dashboard.js"></script>
+  <script type="text/javascript" src="/dpd.js"></script>
+  <script src="scripts/dpd-places-api.js" charset="utf-8"></script>
+  <script type="text/javascript" src="/dpd.js"></script>
+  <script src="scripts/formHandler.js" charset="utf-8"></script>
+  <script src="scripts/remotedatastores.js" charset="utf-8"></script>
+  <script src="scripts/datastore.js" charset="utf-8"></script>
+  <script src="scripts/user.js" charset="utf-8"></script>
+  <script src="scripts/main.js" charset="utf-8"></script>
 
 </body>
+
 </html>
